Add footer with version and author credit
- Updated popup title to FillJoy Simple Form Filler
- Added 'Made by Jason Podur' credit to footer
- Centered footer and styled with separator
- Updated CSS for better footer layout

--- a/popup.html
+++ b/popup.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>JPod's Simple Form Filler</title>
+    <title>FillJoy Simple Form Filler</title>
     <link rel="stylesheet" type="text/css" href="css/popup.css">
   </head>
 
   <body>
     <div class="wrapper">
       <div class="header">
-        <h2 class="extName">JPod's Simple Form Filler</h2>
+        <h2 class="extName">FillJoy Simple Form Filler</h2>
       </div>
 
       <div class="content">
@@ -51,6 +51,8 @@
 
       <div class="footer">
         <span class="version" id="version"></span>
+        <span class="separator">•</span>
+        <span class="author">Made by Jason Podur</span>
       </div>
     </div>
 
