Add Export Fields feature (v3.5.0)
- New 'Export Fields' button to export all form field information
- Exports comprehensive field data as downloadable JSON file
- Includes: field types, IDs, names, labels, placeholders, options
- Shows detected labels and normalized values for debugging
- Added downloads permission to manifest
- Useful for debugging form filling issues

--- a/popup.html
+++ b/popup.html
@@ -31,6 +31,7 @@
 
         <div class="action-section">
           <button id="fillButton" class="fillButton" disabled>Fill Form</button>
+          <button id="exportButton" class="exportButton">Export Fields</button>
         </div>
 
         <div class="info-section">
