Update Export Fields feature: move to bottom, open in new tab
- Moved Export Fields button to bottom of popup
- Opens beautifully formatted HTML page in new tab instead of downloading
- Added visual field information display with color-coded badges
- Shows field types, IDs, names, labels, options, and normalized values
- Includes 'Copy JSON' button for raw data access
- Removed downloads permission (no longer needed)
- Added 🔍 emoji to button for better UX

--- a/popup.html
+++ b/popup.html
@@ -31,7 +31,6 @@
 
         <div class="action-section">
           <button id="fillButton" class="fillButton" disabled>Fill Form</button>
-          <button id="exportButton" class="exportButton">Export Fields</button>
         </div>
 
         <div class="info-section">
@@ -45,6 +44,11 @@
           <p class="info-text">
             Each line: <strong>field_name,value</strong>
           </p>
+        </div>
+
+        <div class="export-section">
+          <button id="exportButton" class="exportButton">🔍 Export Fields</button>
+          <p class="export-text">Debug: View all form fields on this page</p>
         </div>
 
         <div id="snackbar"></div>
